{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 9,
  "lineage": "2022e86e-e7ea-0fd0-1ee4-c452e1fbce14",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NQ3D_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0833ea0dc53141619",
            "arn": "arn:aws:ec2:eu-west-1:296274010522:elastic-ip/eipalloc-0833ea0dc53141619",
            "domain": "vpc",
            "id": "eipalloc-0833ea0dc53141619",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-18-202-150-171.eu-west-1.compute.amazonaws.com",
            "public_ip": "18.202.150.171",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "NQ3D_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:security-group/sg-0c10d800b76de37c3",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c10d800b76de37c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "18.202.150.171/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "attribute-firewall",
            "name_prefix": "",
            "owner_id": "296274010522",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "NQ3D-security-group"
            },
            "tags_all": {
              "Name": "NQ3D-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe77f0a75bfaaabb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.NQ3D_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "NQ3D_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "18.202.150.171/32"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1164684778",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c10d800b76de37c3",
            "security_group_rule_id": "sgr-0bff1bfd5ed78395b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NQ3D_eip",
            "aws_security_group.NQ3D_sg",
            "aws_vpc.NQ3D_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "NQ3D_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:vpc/vpc-0fe77f0a75bfaaabb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-07bdfbbe25a9f1d38",
            "default_route_table_id": "rtb-011b84d5e6568f759",
            "default_security_group_id": "sg-0bfc0ae8e4d5ff0f2",
            "dhcp_options_id": "dopt-0f1ce26971dcd0ae2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fe77f0a75bfaaabb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-011b84d5e6568f759",
            "owner_id": "296274010522"
          }
        }
      ]
    }
  ]
}